# lukszam.github.io

./: README.md  data.json  data_mathvista.json  data_scienceqa.json  index.html  main.py  pyproject.toml  scrape_mathvista.py  scrape_mmmu.py
lvlm_tracker/: scrape_mathvista.py  scrape_mmmu.py
