[tool.poetry]
name = "lvlm-tracker"
version = "0.1.0"
description = ""
authors = ["lukszam <m.luksza@elsevier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.24.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
